clang/test/BSC/Negative/OwnedStruct/initializer/owned-struct-instance-field-with-intializer.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {
    int a = 0; // expected-error {{expected ';' at end of declaration list}}
};

owned struct B {
    static int a = 0; // expected-error {{expected ';' at end of declaration list}}
};

owned struct C {
    int a() = 0; // expected-error {{expected ';' at end of declaration list}}
};

owned struct D {
    int a{0}; // expected-error {{function definition does not declare parameters}}
};

owned struct E {
    E(); // expected-error {{expected member name or ';' after declaration specifiers}}
};
